--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,22 @@
       display: flex;
       margin: 10px 0 10px 0;
       align-items: center;
-      justify-content: space-evenly;
+      justify-content: center;
   }
+
+  .containerButtons {
+    display: flex;
+    margin: 10px 0 10px 0;
+    align-items: center;
+    justify-content: center;
+}
+
+.containerButtons2 {
+  display: flex;
+  margin: 10px 0 10px 0;
+  align-items: center;
+  justify-content: space-evenly;
+}
 
   .containerButtons div{
     width: 20%;
@@ -101,5 +115,14 @@
 .loading img{
   width: 350px;
   height: 255px;
- 
+}
+
+.carritoVacio {
+  display: flex!important;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: center;
+  margin-top: 40px;
+  flex-direction: column;
+  align-items: center;
 }
